--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "rxjs": "5.4.3"
   },
   "devDependencies": {
+    "@gooddata/typings": "0.0.1",
     "@types/express": "4.0.37",
     "@types/invariant": "2.2.29",
     "@types/jest": "21.1.1",
     "@types/json-stable-stringify": "1.0.32",
     "@types/lodash": "4.14.61",
     "@types/node": "7.0.8",
-    "gooddata": "4.3.1",
+    "gooddata": "4.3.1-pavelzgdc-pzb-execute-afm-2017-11-09T10-21-47-002Z",
     "jest": "21.1.0",
     "jest-junit": "3.0.0",
     "ts-jest": "21.0.0",
@@ -50,6 +51,7 @@
     "moduleFileExtensions": [
       "ts",
       "js"
-    ]
+    ],
+    "mapCoverage": true
   }
 }
